Crash when selecting object (tool-related) #56665

Closed
opened 2018-09-03 14:56:17 +02:00 by Dalai Felinto · 3 comments

Blender Version
Broken: cd693955ad (blender2.8 HEAD)
Worked: ?

Short description of error
Crash when selecting an object of a different mode? Not sure what's happening internally. Maybe things are just out of sync and it is triggering the assert.

Exact steps for others to reproduce the error
bones.blend

  • Go to Weight Paint mode
  • Without leaving weight paint mode, select the other torus (Torus)
  • Toggling in and out of Edit Mesh mode.
  • Select the initial torus (Torus.001)

BLI_assert failed: //source/blender/windowmanager/intern/wm_toolsystem.c:82, WM_toolsystem_ref_from_context(), at 'tref == sa->runtime.tool'
Full backtrace: P776

**Blender Version** Broken: cd693955ad (blender2.8 HEAD) Worked: ? **Short description of error** Crash when selecting an object of a different mode? Not sure what's happening internally. Maybe things are just out of sync and it is triggering the assert. **Exact steps for others to reproduce the error** [bones.blend](https://archive.blender.org/developer/F4537909/bones.blend) * Go to Weight Paint mode * Without leaving weight paint mode, select the other torus (Torus) * Toggling in and out of Edit Mesh mode. * Select the initial torus (Torus.001) BLI_assert failed: `//source/blender/windowmanager/intern/wm_toolsystem.c:82, WM_toolsystem_ref_from_context(), at 'tref == sa->runtime.tool'` Full backtrace: [P776](https://archive.blender.org/developer/P776.txt)
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Campbell Barton was assigned by Dalai Felinto 2018-09-03 14:57:11 +02:00

This issue was referenced by 8d421f3d9b

This issue was referenced by 8d421f3d9b3f1f5b6822f6519927f800fc4bfbe2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56665
No description provided.