Fix T56665: Assert when selecting object

Selecting object w/ a different mode missed refreshing the screen
areas current tool.